--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Notes to tab</title>
+    <meta name="description" content="Transcribe notes to guitar tab in realtime, via a browser">
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="http://notestotab.com/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
