--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <meta name="description" content="Transcribe notes to guitar tab in realtime, via a browser">
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="http://notestotab.com/" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781157731291283"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
